<resources>
    <string name="app_name">SysCredit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_text">Hello, Android!</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--Menu items-->
    <string name="home">Home</string>
    <string name="client_registration">Client Registration</string>
    <string name="customer_list">Customer List</string>
    <string name="loan_application">Loan Application</string>
    <string name="routes">Routes</string>
    <string name="reports">Reports</string>
    <string name="catalogs">Catalogs</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="menu_button_description">Menu</string>
    <string name="email">email@syscredit.com</string>

    <!-- Image Descriptions -->
    <string name="ic_default_gravatar_description">Avatar</string>
    <string name="Home">Home</string>

    <!--Login items-->
    <string name="welcome">Welcome!</string>
    <string name="enter_data_message">Enter your details to log in</string>
    <string name="username_input_placeholder">Username</string>
    <string name="password_input_placeholder">Password</string>
    <string name="checkbox_message">Save session</string>
    <string name="recover_account_message">Forgot password?</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_in_button">Sign in</string>

    <!--Register user items-->
    <string name="create_account_message">Create an account!</string>
    <string name="enter_details_message">Enter your details to create your account</string>

    <!--Recover Account items-->
    <string name="recover_account">Recover account!</string>
    <string name="enter_email_message">Enter email to renew password</string>
    <string name="email_input_placeholder">Email</string>
    <string name="send_button">Send</string>

    <!--Home Fragment-->
    <string name="home_welcome_message">Welcome</string>
    <string name="home_instant_cash_message">Instant cash</string>
    <string name="home_new_customer">New Customer</string>
    <string name="home_customer_list">List Customer</string>
    <string name="home_loan_application">Loan Application</string>
    <string name="home_routes">Routes</string>
    <string name="home_reports">Reports</string>
    <string name="home_catalogs">Catalogs</string>

    <!-- Presentation One -->
    <string name="presentation_number_one" translatable="false">1/4</string>
    <string name="presentation_one_title">Welcome to SysCredit</string>
    <string name="presentation_one_description">The Most Reliable Loan System to Run Your Business, <b>and Faster.</b></string>
    <string name="presentation_one_highlight">and Faster.</string>

    <!-- Presentation Two -->
    <string name="presentation_number_two" translatable="false">2/4</string>
    <string name="presentation_two_description">SysCredit is built to facilitate the daily </string>
    <string name="presentation_two_highlight">Order </string>
    <string name="presentation_two_description_2">order of your loans or collections All in one place.</string>

    <!-- Presentation Three -->
    <string name="presentation_number_three" translatable="false">3/4</string>
    <string name="presentation_three_description">Do not worry! SysCredit gives you security total, manage everything from a remote center like a total </string>
    <string name="presentation_three_highlight">Lookout.</string>

    <!-- Presentation Four -->
    <string name="presentation_number_four" translatable="false">4/4</string>
    <string name="presentation_four_description">SysCredit </string>
    <string name="presentation_four_highlight">Accessibility </string>
    <string name="presentation_four_description_2">tailored to your hand!.</string>

    <!-- Name Button -->
    <string name="next_button">Next</string>
    <string name="skip_button">Skip</string>

</resources>