<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_presentation_number_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/presentation_number_three"
        android:textAlignment="textEnd"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_presentation_three"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_presentation_lighthouse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_presentation_number_three"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_presentation_three_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/helvetica_neue_med"
        android:text="@string/presentation_three_description"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/iv_presentation_three"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/btn_skip_presentation_three"
        style="@style/Style.SysCredit.Skip.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/skip_button"
        app:layout_constraintEnd_toStartOf="@id/btn_next_presentation_three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_presentation_three_description" />

    <Button
        android:id="@+id/btn_next_presentation_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_skip_presentation_three"
        app:layout_constraintTop_toBottomOf="@id/tv_presentation_three_description" />

</androidx.constraintlayout.widget.ConstraintLayout>